--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "start": "next start"
+    "start": "next start",
+    "migrate": "drizzle-kit migrate"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
@@ -11,7 +12,9 @@
     "@vercel/postgres": "^0.8.0",
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
+    "better-sqlite3": "^11.3.0",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.33.0",
     "next": "15.0.0-canary.56",
     "next-auth": "5.0.0-beta.19",
     "postcss": "8.4.38",
@@ -24,9 +27,11 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/better-sqlite3": "^7.6.11",
     "@types/node": "20.14.8",
     "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0"
+    "@types/react-dom": "18.3.0",
+    "drizzle-kit": "^0.24.2"
   },
   "engines": {
     "node": ">=20.12.0"
